# electron-rust-example

./: LICENSE  README.md
examples/example_rust_dependency/example-project/: package.json
examples/example_rust_dependency/example-project/app/components/: Home.js
examples/example_rust_dependency/example-rust/: README.md  package.json
examples/example_rust_dependency/example-rust/lib/: index.js
examples/example_rust_dependency/example-rust/native/: Cargo.toml
rust/: UpgradeRustDependency.sh
