[package]
name = "example-rust"
version = "0.1.0"
authors = ["Greg Pstrucha <gpstrucha@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "example_rust"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
